[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Camera.tscn" type="PackedScene" id=2]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera" parent="." instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
margin_right = 89.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 311.0
margin_bottom = 147.0

[node name="general_info" type="VBoxContainer" parent="CanvasLayer/PanelContainer/HBoxContainer"]
margin_right = 75.0
margin_bottom = 140.0

[node name="title" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer/general_info"]
margin_right = 75.0
margin_bottom = 14.0
text = "Information"

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/PanelContainer/HBoxContainer/general_info"]
margin_top = 18.0
margin_right = 75.0
margin_bottom = 22.0

[node name="object_name" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer/general_info"]
margin_top = 26.0
margin_right = 75.0
margin_bottom = 40.0
text = "name"

[node name="object_mass" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer/general_info"]
margin_top = 44.0
margin_right = 75.0
margin_bottom = 58.0
text = "mass"

[node name="planet_info" type="VBoxContainer" parent="CanvasLayer/PanelContainer/HBoxContainer"]
margin_left = 79.0
margin_right = 160.0
margin_bottom = 140.0

[node name="title" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer/planet_info"]
margin_right = 81.0
margin_bottom = 14.0
text = "Planet"

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/PanelContainer/HBoxContainer/planet_info"]
margin_top = 18.0
margin_right = 81.0
margin_bottom = 22.0

[node name="pop_info" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer/planet_info"]
margin_top = 26.0
margin_right = 81.0
margin_bottom = 40.0
text = "pops"

[node name="tax_label" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer/planet_info"]
margin_top = 44.0
margin_right = 81.0
margin_bottom = 58.0
text = "Tax Rate"

[node name="tax" type="HSlider" parent="CanvasLayer/PanelContainer/HBoxContainer/planet_info"]
margin_top = 62.0
margin_right = 81.0
margin_bottom = 78.0
max_value = 1.0
step = 0.01
tick_count = 1

[node name="subsidy_label" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer/planet_info"]
margin_top = 82.0
margin_right = 81.0
margin_bottom = 96.0
text = "Subsidy Rate"

[node name="subsidy" type="HSlider" parent="CanvasLayer/PanelContainer/HBoxContainer/planet_info"]
margin_top = 100.0
margin_right = 81.0
margin_bottom = 116.0
max_value = 1.0
step = 0.01
tick_count = 1

[node name="apply_button" type="Button" parent="CanvasLayer/PanelContainer/HBoxContainer/planet_info"]
margin_top = 120.0
margin_right = 81.0
margin_bottom = 140.0
text = "Apply"

[node name="market_info" type="VBoxContainer" parent="CanvasLayer/PanelContainer/HBoxContainer"]
margin_left = 164.0
margin_right = 208.0
margin_bottom = 140.0

[node name="title" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer/market_info"]
margin_right = 44.0
margin_bottom = 14.0
text = "Market"

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/PanelContainer/HBoxContainer/market_info"]
margin_top = 18.0
margin_right = 44.0
margin_bottom = 22.0

[node name="good_info" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer/market_info"]
margin_top = 26.0
margin_right = 44.0
margin_bottom = 40.0
text = "pops"

[node name="pop_info" type="VBoxContainer" parent="CanvasLayer/PanelContainer/HBoxContainer"]
margin_left = 212.0
margin_right = 304.0
margin_bottom = 140.0

[node name="title" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer/pop_info"]
margin_right = 92.0
margin_bottom = 14.0
text = "Demographics"

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/PanelContainer/HBoxContainer/pop_info"]
margin_top = 18.0
margin_right = 92.0
margin_bottom = 22.0

[node name="pop_info" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer/pop_info"]
margin_top = 26.0
margin_right = 92.0
margin_bottom = 40.0
text = "pops"

[node name="EmpireInfo" type="PanelContainer" parent="CanvasLayer"]
margin_left = 643.0
margin_right = 1022.0
margin_bottom = 37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empires" type="VBoxContainer" parent="CanvasLayer/EmpireInfo"]
margin_left = 7.0
margin_top = 7.0
margin_right = 372.0
margin_bottom = 30.0

[node name="Empire" type="HBoxContainer" parent="CanvasLayer/EmpireInfo/Empires"]
margin_right = 365.0
margin_bottom = 14.0

[node name="credits" type="Label" parent="CanvasLayer/EmpireInfo/Empires/Empire"]
margin_right = 44.0
margin_bottom = 14.0
text = "credits"

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/EmpireInfo/Empires/Empire"]
margin_left = 48.0
margin_right = 52.0
margin_bottom = 14.0

[node name="resources" type="Label" parent="CanvasLayer/EmpireInfo/Empires/Empire"]
margin_left = 56.0
margin_right = 111.0
margin_bottom = 14.0
text = "Minerals"

[connection signal="pressed" from="CanvasLayer/PanelContainer/HBoxContainer/planet_info/apply_button" to="." method="_on_apply_button_pressed"]
